--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
 <body>
     <main>
         <header>
-            <h1>titulo do Site</h1>
+            <h1>Tecido Acrobatico</h1>
         </header>
         <article>
-            <h2>Artigo 001
-                <p>texto do artigo 001</p>
+            <h2>quedas
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde optio eveniet earum repellendus provident? Blanditiis accusantium labore, totam eius incidunt illo aspernatur in voluptatem autem, tenetur ipsam. At, earum pariatur.</p>
             </h2>
         </article>
         <article>
-            <h2>Artigo 002
-                <p>Texto artigo 002
-                    
+            <h2>figuras
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit accusantium harum nihil eos tenetur id modi qui at culpa vero animi voluptas ex alias expedita, repudiandae hic nulla tempora quae!
+
                 </p>
             </h2>
         </article>
